--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,10 @@
     <!-- your app's js -->
 
     <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
+    <link rel="stylesheet" href="css/mapbox-gl.css">
+    <link rel="stylesheet" href="css/leaflet.css">
+    <script type="text/javascript" src="js/leaflet.js"></script>
+    <script type="text/javascript" src="js/TileLayer.MBTiles.js"></script>
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
     <script src="js/angular-md5.js"></script>
     <script src="js/firebase.js"></script>
@@ -43,10 +47,8 @@
     <script src="js/services.js"></script>
     <script src="js/ion-gallery.min.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/mapbox-gl.js"></script>
 
-    <script 
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaEMPvIT3AxjEfrg3Be-PiDnxj_cXIhyU">
-    </script>
   
   </head>
   <body ng-app="starter">
